plugins {
	id 'org.openjfx.javafxplugin' version '0.0.13'
	id 'java'
	id 'application'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}
repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.openjfx:javafx-base:19'
	implementation 'org.openjfx:javafx-controls:19'
	implementation 'org.openjfx:javafx-fxml:19'
	implementation 'org.openjfx:javafx-media:19'
	implementation 'javazoom:jlayer:1.0.1'
	implementation 'com.google.code.gson:gson:2.11.0'
	implementation 'net.jthink:jaudiotagger:3.0.1'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
	testImplementation 'org.mockito:mockito-core:5.5.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
	testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
	testImplementation 'org.testfx:testfx-core:4.0.16-alpha'

	implementation 'ch.qos.logback:logback-classic:1.4.11'
	implementation 'org.slf4j:slf4j-api:2.0.9'
}

javafx {
	version = "19"
	modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
}

test {
	useJUnitPlatform()
}

application {
	mainClass = 'com.example.jambo.Jambo'
}

sourceSets {
	main {
		resources {
			srcDirs = ['src/main/resources']
		}
	}
}
